--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -16,12 +16,12 @@
 .movie {
     width: 100%;
     display: flex;
-    flex-direction: space-between;
     align-items: center;
     flex-direction: row;
     margin-bottom: 20px;
 }
 .details {
+    height: 100%;
     width: 30%;
     margin-left: 15px;
 }
